--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <strong id="hud-streak">0</strong>
       </div>
       <div class="hud-chip small">
+        <span>OMNISCORE</span>
+        <strong id="hud-omni">0</strong>
+      </div>
+      <div class="hud-chip small">
         <span>LIFE XP</span>
         <strong id="hud-life-xp">0</strong>
       </div>
@@ -61,14 +65,14 @@
     <section id="life-card" class="card">
       <h2>LIFE CORE • ASCENSION ORBITS</h2>
       <p class="sub-hint">
-        Netflix-tyylinen karuselli. Nuolet tai swipe/klikkailu vaihtaa orbia. Double-tap isoa ympyrää, kun toteutit sen tänään.
+        Netflix-tyylinen karuselli. Nuolet tai klikit vaihtavat orbia. Double-tap isoa ympyrää, kun toteutit sen tänään.
       </p>
       <div class="orbit-row">
         <button id="life-prev" class="orbit-nav-btn">‹</button>
         <div class="orbit-main">
           <div id="life-orbit-circle" class="orbit-circle">
             <div class="orbit-inner">
-              <div id="life-orbit-name" class="orbit-name">Blade Focus</div>
+              <div id="life-orbit-name" class="orbit-name">Mindforge Ritual</div>
               <div id="life-orbit-today" class="orbit-today">Tänään: —</div>
               <div id="life-orbit-xp" class="orbit-xp">XP: 0% (0/90)</div>
             </div>
